# kafka-to-nexus

./: .clang-format  .codecov.yml  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Containerfile  Dockerfile  Doxygen.conf  Jenkinsfile  PULL_REQUEST_TEMPLATE.md  README.md  breaking_changes.md  changes.md  codecov.yml  conanfile.py  conanfile.txt  docker-compose.yml  docker_launch.sh  exampleCmd.json  exampleconfig.ini  someFilePathdt
apps/: CMakeLists.txt  file-maker.cpp  kafka-to-nexus.cpp  kafka-to-nexus.h  template-maker.cpp
src/: Alloc.h  AllocStd.h  BrokerSettings.cxx  BrokerSettings.h  CLIOptions.cpp  CLIOptions.h  CMakeCache.txt  CMakeLists.txt  CollectiveQueue.h  CommandHandler.cpp  CommandHandler.cxx  CommandHandler.h  CommandListener.cpp  CommandListener.cxx  CommandListener.h  CommandParser.cpp  CommandParser.h  DataMessageWriter.cpp  DataMessageWriter.h  DemuxTopic.cpp  DemuxTopic.cxx  DemuxTopic.h  Errors.cpp  Errors.cxx  Errors.h  Errors.hpp  EventLogger.cpp  EventLogger.h  ExtensibleDataset.cpp  ExtensibleDataset.h  FileWriterTask.cpp  FileWriterTask.cxx  FileWriterTask.h  Filesystem.h  FlatBufferGenerators.h  FlatbufferMessage.cpp  FlatbufferMessage.h  FlatbufferReader.cpp  FlatbufferReader.cxx  FlatbufferReader.h  (+148 more)
src/AccessMessageMetadata/: CMakeLists.txt
src/CommandSystem/: CommandListener.cpp  CommandListener.h  Commands.h  FeedbackProducer.cpp  FeedbackProducer.h  FeedbackProducerBase.h  Handler.cpp  Handler.h  IdChecker.cpp  IdChecker.h  JobListener.cpp  JobListener.h  Parser.cpp  Parser.h  ResponseProducer.cpp  ResponseProducer.h  ResponseProducerBase.h
src/HDF5/: HDFAttributes.cpp  HDFFile.cpp  HDFFile.h  HDFOperations.cpp  HDFVersionCheck.cpp  HDFVersionCheck.h
src/JsonConfig/: Field.cpp  Field.h  FieldHandler.cpp  FieldHandler.h
src/Kafka/: BrokerSettings.h  ConfigureKafka.cpp  ConfigureKafka.h  Consumer.cpp  Consumer.h  ConsumerFactory.cpp  ConsumerFactory.h  ConsumerRebalanceCb.h  KafkaEventCb.h  MetaDataQuery.cpp  MetaDataQuery.h  MetaDataQueryImpl.cpp  MetaDataQueryImpl.h  MetadataException.h  PollStatus.h  Producer.cpp  Producer.h  ProducerDeliveryCb.h  ProducerMessage.h  ProducerStats.h  ProducerTopic.cpp  ProducerTopic.h
src/KafkaW/: BrokerSettings.cpp  BrokerSettings.cxx  BrokerSettings.h  ConfigureKafka.cpp  ConfigureKafka.h  Consumer.cpp  Consumer.cxx  Consumer.h  ConsumerEventCb.h  ConsumerFactory.cpp  ConsumerFactory.h  ConsumerFake.cpp  ConsumerFake.h  ConsumerMessage.h  ConsumerRebalanceCb.h  ConsumerSettings.h  KafkaEventCb.h  KafkaW.cpp  KafkaW.cxx  KafkaW.h  MetaDataQuery.cpp  MetaDataQuery.h  MetaDataQueryImpl.cpp  MetaDataQueryImpl.h  MetadataException.h  Msg.cpp  Msg.cxx  Msg.h  PollStatus.cpp  PollStatus.cxx  PollStatus.h  Producer.cpp  Producer.cxx  Producer.h  ProducerDeliveryCb.h  ProducerEventCb.h  ProducerMessage.h  ProducerStats.h  ProducerTopic.cpp  ProducerTopic.cxx  (+5 more)
src/MetaData/: HDF5DataWriter.cpp  HDF5DataWriter.h  HDF5Dataset.cpp  HDF5Dataset.h  HDF5MetaData.cpp  HDF5MetaData.h  HDF5Storage.cpp  HDF5Storage.h  Tracker.cpp  Tracker.h  Value.cpp  Value.h  ValueInternal.cpp  ValueInternal.h
src/Metrics/: CarbonConnection.cpp  CarbonConnection.h  CarbonInterface.cpp  CarbonInterface.h  CarbonSink.cpp  CarbonSink.h  ConnectionStatus.h  InternalMetric.h  LogSink.cpp  LogSink.h  Metric.cpp  Metric.h  MetricsList.h  Processor.cpp  Processor.h  Registrar.cpp  Registrar.h  Reporter.cpp  Reporter.h  ReporterFactory.cpp  ReporterFactory.h  Sink.h  Type.cpp  Type.h
src/NeXusDataset/: AdcDatasets.cpp  AdcDatasets.h  CMakeLists.txt  EpicsAlarmDatasets.cpp  EpicsAlarmDatasets.h  ExtensibleDataset.cpp  ExtensibleDataset.h  GrowthDataset.h  NeXusDataset.cpp  NeXusDataset.h
src/Statistics/: HDF5DataWriter.h  Tracker.cpp  Tracker.h  Value.h  ValueInternal.h
src/Status/: StatusInfo.h  StatusReporter.cpp  StatusReporter.h  StatusReporterBase.cpp  StatusReporterBase.h  StatusService.cpp  StatusService.h
src/Stream/: Clock.h  Message.cpp  Message.h  MessageWriter.cpp  MessageWriter.h  Partition.cpp  Partition.h  PartitionFilter.cpp  PartitionFilter.h  SourceFilter.cpp  SourceFilter.h  Topic.cpp  Topic.h
src/WriterModule/: CMakeLists.txt  ModuleFunction.cmake
src/WriterModuleConfig/: Field.cpp  Field.h  FieldHandler.cpp  FieldHandler.h
src/date/: date.h  ios.h  tz.cpp  tz.h  tz_private.h  tzblobs.cpp  tzblobs.h
src/fb_metadata_extractors/: CMakeLists.txt  ExtractorFunction.cmake
src/mapbox/: optional.hpp  recursive_wrapper.hpp  variant.hpp  variant_cast.hpp  variant_io.hpp  variant_visitor.hpp
src/schemas/: CMakeLists.txt  ModuleFunction.cmake
src/tests/: AddReader.cpp  AddReader.h  AreaDetectorTest.cpp  AreaDetectorTests.cpp  CMakeLists.txt  ChopperTimeStampWriterTests.cpp  CommandHandlerTest.cpp  CommandHandlerTests.cpp  CommandParserTests.cpp  ConsumerFactoryTests.cpp  ConsumerTests.cpp  CoverageFix.cpp  DataMessageWriterTests.cpp  DemuxerTests.cpp  EpicsConnectionStatusTests.cpp  EventHistogramWriterTests.cpp  EventLogger.cpp  EventLoggerTests.cpp  EventWriterTests.cpp  ExtensibleDatasetTests.cpp  FastSampleEnvironmentWriterTests.cpp  FileWriterTaskTests.cpp  H5Tests.cpp  HDFAttributesTest.cpp  HDFFile.cpp  HDFFile.cxx  HDFFileAttributesTest.cpp  HDFFileAttributesTests.cpp  HDFFileTest.cpp  HDFFileTestHelper.cpp  HDFFileTestHelper.h  HDFFileTests.cpp  HDFOperationsTests.cpp  (+95 more)
test/: CMakeLists.txt  HDFFile.cxx  msg-conf-exit.json  msg-conf-new-01.json  msg-conf-new-03.json  msg-conf-stop.json  producer.py  producer_msg.py  round-trip.cxx  schema-command.json  send-command.py  streamer_test.cxx  streammaster_test.cxx
tests/: CMakeLists.txt  ConsumerTests.cpp  HDFAttributesTest.cpp  HDFFileAttributesTests.cpp  HDFFileTest.cpp  HDFOperationsTests.cpp  JobCreatorTests.cpp  JsonToFlatbuffersTests.cpp  KafkaToNexusTests.cpp  MasterTests.cpp  MessageTests.cpp  MultiVectorTest.cpp  ProducerDeliveryTests.cpp  ProducerTests.cpp  SourceTests.cpp  StatusReporterTests.cpp  ThreadedExecutorTests.cpp  UnitTests.cpp
(+725 files in other folders)
