set(kafka_to_nexus_SRC
        FlatbufferReader.cpp
        Metrics/CarbonSink.cpp
        Metrics/Reporter.cpp
        Metrics/CarbonInterface.cpp
        Metrics/Metric.cpp
        Metrics/LogSink.cpp
        Metrics/CarbonConnection.cpp
        Metrics/Registrar.cpp
        SetThreadName.cpp
        Source.cpp
        WriterModuleBase.cpp
        JsonConfig/Field.cpp
        JsonConfig/FieldHandler.cpp
        FileWriterTask.cpp
        Stream/PartitionFilter.cpp
        Stream/MessageWriter.cpp
        Stream/Topic.cpp
        Stream/SourceFilter.cpp
        Stream/Partition.cpp
        TimeUtility.cpp
        helper.cpp
        URI.cpp
        HDFOperations.cpp
        Status/StatusReporter.cpp
        Status/StatusReporterBase.cpp
        Master.cpp
        JobCreator.cpp
        CommandSystem/JobListener.cpp
        CommandSystem/CommandListener.cpp
        CommandSystem/FeedbackProducer.cpp
        CommandSystem/Handler.cpp
        CommandSystem/Parser.cpp
        Kafka/ProducerTopic.cpp
        Kafka/MetaDataQuery.cpp
        Kafka/Producer.cpp
        Kafka/ConfigureKafka.cpp
        Kafka/ConsumerFactory.cpp
        Kafka/Consumer.cpp
        MainOpt.cpp
        FlatbufferMessage.cpp
        NeXusDataset/NeXusDataset.cpp
        NeXusDataset/EpicsAlarmDatasets.cpp
        NeXusDataset/AdcDatasets.cpp
        NeXusDataset/ExtensibleDataset.cpp
        StreamController.cpp
        logger.cpp
        WriterRegistrar.cpp
        AccessMessageMetadata/NDAr/NDAr_Extractor.cpp
        AccessMessageMetadata/hs00/hs00_Extractor.cpp
        AccessMessageMetadata/ns10/ns10_Extractor.cpp
        AccessMessageMetadata/tdct/tdct_Extractor.cpp
        AccessMessageMetadata/template/TemplateExtractor.cpp
        AccessMessageMetadata/ad00/ad00_Extractor.cpp
        AccessMessageMetadata/ADAr/ADAr_Extractor.cpp
        AccessMessageMetadata/ev44/ev44_Extractor.cpp
        AccessMessageMetadata/ev42/ev42_Extractor.cpp
        AccessMessageMetadata/f144/f144_Extractor.cpp
        AccessMessageMetadata/f142/f142_Extractor.cpp
        AccessMessageMetadata/se00/se00_Extractor.cpp
        AccessMessageMetadata/al00/al00_Extractor.cpp
        AccessMessageMetadata/senv/senv_Extractor.cpp
        AccessMessageMetadata/ep01/ep01_Extractor.cpp
        AccessMessageMetadata/da00/da00_Extractor.cpp
        WriterModule/tdct/tdct_Writer.cpp
        WriterModule/template/TemplateWriter.cpp
        WriterModule/ad00/ad00_Writer.cpp
        WriterModule/ev44/ev44_Writer.cpp
        WriterModule/ev42/ev42_Writer.cpp
        WriterModule/f144/f144_Writer.cpp
        WriterModule/f142_test/f142_TestWriter.cpp
        WriterModule/f142/f142_Writer.cpp
        WriterModule/se00/se00_Writer.cpp
        WriterModule/al00/al00_Writer.cpp
        WriterModule/ep01/ep01_Writer.cpp
        WriterModule/mdat/mdat_Writer.cpp
        WriterModule/da00/da00_Writer.cpp
        WriterModule/da00/da00_Type.cpp
        HDFVersionCheck.cpp
        MetaData/Tracker.cpp
        MetaData/HDF5DataWriter.cpp
        HDFAttributes.cpp
        HDFFile.cpp
        )

add_library(filewriter_lib SHARED ${kafka_to_nexus_SRC})
target_link_libraries(filewriter_lib PRIVATE  ${CONAN_LIBS})
target_include_directories(filewriter_lib PUBLIC .)
