include(ExtractorFunction.cmake)
add_subdirectory(f142)
add_subdirectory(ev42)
add_subdirectory(ev44)
add_subdirectory(se00)
add_subdirectory(senv)
add_subdirectory(NDAr)
add_subdirectory(ADAr)
add_subdirectory(template)
add_subdirectory(hs00)
add_subdirectory(tdct)
add_subdirectory(ns10)
add_subdirectory(ep00)
add_subdirectory(ep01)
add_subdirectory(al00)
add_subdirectory(f144)
add_subdirectory(mdat)
